Fix desktop font-size too small

--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -115,6 +115,9 @@ footer
         align-self: flex-start
 
 @media screen and (min-width: 1025px)
+  body, html
+    font-size: $font-size
+
   .sdm-layout
     &__block
       flex-basis: 30vw
